--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-body {
-  background-color: lightsalmon;
-  font-family: sans-serif;
-}
+/* imports */
+@import './css/reset.css';
+@import './css/vars.css';
+@import './css/components/navbar.css';
