--- a/src/css/components/navbar.css
+++ b/src/css/components/navbar.css
@@ -1,1 +1,37 @@
 /* navbar */
+
+.menu {
+  text-transform: uppercase;
+}
+
+.menu__items {
+  display: flex;
+}
+
+.menu--secondary {
+  display: flex;
+  justify-content: space-between;
+  height: 2.5rem;
+  font-size: 0.7rem;
+
+  & .menu__items .menu__item {
+    padding: 0 .7rem;
+    display: flex;
+    align-items: center;
+  }
+}
+
+.menu--primary {
+  height: 4.37rem;
+  font-size: 1.4rem;
+  background-color: var(--colorGrey);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  & .menu__items .menu__item {
+    padding: 0 1.25rem;
+    display: flex;
+    align-items: center;
+  }
+}
