--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,8 @@
 /* imports */
 @import './css/reset.css';
 @import './css/vars.css';
+@import './css/base.css';
+@import './css/layout.css';
+@import './css/typography.css';
+
 @import './css/components/navbar.css';
