--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -2,5 +2,7 @@
   --colorRed: #ee090c;
   --colorGrey: #f8f8f4;
   --colorYellow: #ffe408;
-  --spacerRegular: 1.25rem;
+  --spacerRegular: .94rem;
+  --spacerBig: 1.9rem;
+
 }
