--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
 @import './css/vars.css';
 @import './css/base.css';
 @import './css/layout.css';
+@import './css/helpers.css';
 @import './css/typography.css';
 
 @import './css/components/navbar.css';
