--- a/src/css/components/navbar.css
+++ b/src/css/components/navbar.css
@@ -1,5 +1,3 @@
-/* navbar */
-
 .menu {
   text-transform: uppercase;
 }
@@ -8,14 +6,24 @@
   display: flex;
 }
 
+.menu__item {
+  transition: 0.2s ease-in-out color;
+
+  &:hover {
+    color: var(--colorRed);
+  }
+}
+
 .menu--secondary {
   display: flex;
   justify-content: space-between;
   height: 2.5rem;
   font-size: 0.7rem;
+  font-family: Arial, 'Helvetica Neue', sans-serif;
+  letter-spacing: .5px;
 
   & .menu__items .menu__item {
-    padding: 0 .7rem;
+    padding: 0.7rem;
     display: flex;
     align-items: center;
   }
@@ -25,7 +33,7 @@
   height: 4.37rem;
   font-size: 1.4rem;
   background-color: var(--colorGrey);
-
+  font-family: 'Swiss Condensed', sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -34,4 +42,62 @@
     display: flex;
     align-items: center;
   }
+
+  & .menu__items {
+    justify-content: center;
+  }
+}
+
+/* ICONS */
+
+.menu__icons {
+  margin-left: 1rem;
+  display: flex;
+}
+
+.menu__item--icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &:before {
+    content: '';
+    position: absolute;
+    background-repeat: no-repeat;
+  }
+}
+
+.menu__item--search {
+  &:before {
+    height: 1.25rem;
+    width: 1.25rem;
+    background-image: url(./../../assets/img/icons/search.svg);
+  }
+  &:hover:before {
+    background-image: url(./../../assets/img/icons/search-hover.svg);
+  }
+}
+
+.menu__item--cart {
+  padding: .5rem !important;
+
+  &:before {
+    height: 1.6rem;
+    width: 1.6rem;
+    background-image: url(./../../assets/img/icons/cart-empty.svg);
+  }
+  &:hover:before {
+    background-image: url(./../../assets/img/icons/cart-empty-hover.svg);
+  }
+}
+
+/* LOGO */
+
+.menu__item--logo {
+  padding: 0 !important;
+}
+
+.identity__logo {
+  width: 210px;
+  height: 70px;
 }
