--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,5 @@
 @import './css/typography.css';
 
 @import './css/components/navbar.css';
+@import './css/components/button.css';
+@import './css/components/banner.css';
