Added form for filter option closing #18

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -4,6 +4,11 @@
 }
 /* stylelint-enable */
 
+::selection {
+  color: white;
+  background: var(--colorRed);
+}
+
 html {
   box-sizing: inherit;
   height: 100%
