--- a/src/style.css
+++ b/src/style.css
@@ -9,3 +9,4 @@
 @import './css/components/navbar.css';
 @import './css/components/button.css';
 @import './css/components/banner.css';
+@import './css/components/filter.css';
