Footer toegevoegd closed #19

--- a/src/style.css
+++ b/src/style.css
@@ -10,3 +10,5 @@
 @import './css/components/button.css';
 @import './css/components/banner.css';
 @import './css/components/filter.css';
+@import './css/components/shopitem.css';
+@import './css/components/footer.css';
