--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -3,9 +3,8 @@
   --colorYellow: #ffe408;
   --colorGrey: #f8f8f4;
   --colorGreyDark: #c2c2c2;
-  --spacerRegular: .94rem;
+  --spacerRegular: 1.25rem;
   --spacerBig: 1.9rem;
-
   --fontLabel: .75rem;
   --fontSmall: .9rem;
   --fontRegular: 1rem;
