--- a/src/css/components/shopitem.css
+++ b/src/css/components/shopitem.css
@@ -36,6 +36,24 @@
   }
 }
 
+.back {
+  margin-top: var(--spacerBig);
+  display: block;
+  transform: translateX(2rem);
+
+  &:before {
+  position: absolute;
+  content: '';
+  width: 1rem;
+  height: 1rem;
+  background-image: url(../../assets/img/icons/back.svg);
+  transform: translateX(-2rem)
+  }
+
+  &:hover {
+    color: var(--colorRed)
+  }
+}
 
 
 
