--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -3,6 +3,12 @@
   margin: 0 auto;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 footer {
   margin-top: var(--spacerBig);
 }
