--- a/src/style.css
+++ b/src/style.css
@@ -11,4 +11,7 @@
 @import './css/components/banner.css';
 @import './css/components/filter.css';
 @import './css/components/shopitem.css';
+@import './css/components/itemdetail.css';
+@import './css/components/form.css';
 @import './css/components/footer.css';
+
