Webshop items aan database linken 11

--- a/src/css/components/form.css
+++ b/src/css/components/form.css
@@ -26,21 +26,19 @@ input::-webkit-inner-spin-button {
 .label--quantity button {
   outline: none;
   -webkit-appearance: none;
-  background-color: transparent;
   border: none;
   align-items: center;
   justify-content: center;
-  width: 1rem;
-  height: 1rem;
   cursor: pointer;
   margin: 0;
   position: relative;
-}
-
-.label--quantity button {
   background-color: var(--colorGrey);
   height: 3rem;
-  width: 1.5rem
+  width: 1.8rem;
+
+  &:hover:before, &:hover:after {
+    background-color: black;
+  }
 }
 
 .label--quantity button:before,
@@ -48,12 +46,12 @@ input::-webkit-inner-spin-button {
   display: inline-block;
   position: absolute;
   content: '';
-  font-size: 1rem;
-  width: .5rem;
-  height: .08rem;
-  background-color: black;
+  width: .6rem;
+  height: .1rem;
+  background-color: rgb(197, 197, 197);
   transform: translate(-50%, -50%);
 }
+
 .label--quantity button.plus:after {
   transform: translate(-50%, -50%) rotate(90deg);
 }
