--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -6,6 +6,7 @@
   --spacerRegular: 1.25rem;
   --spacerBig: 1.9rem;
   --fontLabel: .75rem;
+  --fontExtraSmall: .75rem;
   --fontSmall: .9rem;
   --fontRegular: 1rem;
   --fontMedium: 1.3rem;
