--- a/src/css/base.css
+++ b/src/css/base.css
@@ -16,7 +16,6 @@ html {
 
 body {
   height: 100%;
-  line-height: 1.5;
 }
 
 header {
@@ -29,10 +28,15 @@ header {
 a {
   color: black;
   text-decoration: none;
+  cursor: pointer;
 }
 
 main {
   margin-bottom: 7rem;
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 @font-face {
