--- a/src/css/components/footer.css
+++ b/src/css/components/footer.css
@@ -1,13 +1,12 @@
-/* footer */
 .footer {
   margin-top: var(--spacerBig);
   border-top: .2rem solid black;
   font-size: var(--fontSmall);
 }
 
-footer:before {
-  background-color: #000;
-  content: "";
+footer::before {
+  background-color: black;
+  content: '';
   display: block;
   height: 1px;
   left: 0;
@@ -29,13 +28,13 @@ footer:before {
 .footer__column {
   width: 12.75rem;
 
-  &:before {
+  &::before {
     content: '';
     position: absolute;
     height: 28rem;
     width: 1rem;
     transform: translateX(-1.5rem);
-    background-image: linear-gradient(to bottom, #000 40%, rgba(255, 255, 255, 0) 20%);
+    background-image: linear-gradient(to bottom, black 40%, rgba(255, 255, 255, 0) 20%);
     background-position: bottom;
     background-size: 1px 3px;
     background-repeat: repeat-y;
@@ -51,7 +50,7 @@ footer:before {
 .list__item {
   text-transform: uppercase;
   letter-spacing: 1px;
-  padding-bottom: calc(var(--spacerRegular)/2);
+  padding-bottom: calc(var(--spacerRegular) / 2);
 
   &:last-of-type {
     margin-bottom: var(--spacerRegular);
