--- a/src/css/base.css
+++ b/src/css/base.css
@@ -11,7 +11,7 @@
 
 html {
   box-sizing: inherit;
-  height: 100%
+  height: 100%;
 }
 
 body {
@@ -47,7 +47,7 @@ button:hover {
 }
 
 @font-face {
-  font-family: 'Swiss';
+  font-family: Swiss;
   src: url(./../assets/fonts/Swiss/Swiss.woff2) format('woff2'), url(./../assets/fonts/Swiss/Swiss.woff) format('woff');
   font-weight: normal;
   font-style: normal;
@@ -73,4 +73,3 @@ button:hover {
   font-weight: normal;
   font-style: oblique;
 }
-
