--- a/src/css/components/cart.css
+++ b/src/css/components/cart.css
@@ -13,10 +13,10 @@
   text-align: center;
 }
 
-.form--cartoverview:before {
+.form--cartoverview::before {
   content: '';
   display: block;
-  width:100%;
+  width: 100%;
   position: relative;
   border: .05rem solid var(--colorGreyBorder);
   top: 1.5rem;
@@ -36,7 +36,7 @@
 
   &:not(:last-of-type) {
     padding-bottom: var(--spacerBig);
-    background-image: linear-gradient(to right, #000 40%, rgba(255, 255, 255, 0) 20%);
+    background-image: linear-gradient(to right, black 40%, rgba(255, 255, 255, 0) 20%);
     background-position: bottom;
     background-size: 3px 1px;
     background-repeat: repeat-x;
@@ -91,7 +91,7 @@
       outline: none;
     }
 
-    &:before {
+    &::before {
       content: '';
       height: 1rem;
       width: 1rem;
@@ -102,7 +102,7 @@
   & .info__title {
     font-family: var(--fontBody);
     font-size: var(--fontRegular);
-    margin-bottom: calc(var(--spacerRegular)/2);
+    margin-bottom: calc(var(--spacerRegular) / 2);
   }
 }
 
@@ -133,14 +133,16 @@
     text-transform: uppercase;
     display: flex;
     align-items: center;
+
     & .totalprice {
       font-weight: bold;
       font-family: var(--fontTitle);
       font-size: var(--fontBig);
     }
   }
+
   & p {
     margin-bottom: 0;
- margin-right: var(--spacerRegular);
+    margin-right: var(--spacerRegular);
   }
 }
