--- a/src/css/components/navbar.css
+++ b/src/css/components/navbar.css
@@ -7,7 +7,7 @@
 }
 
 .menu__item {
-  transition: 0.2s ease-in-out color;
+  transition: .2s ease-in-out color;
 
   &:hover, & a:hover {
     color: var(--colorRed);
@@ -18,11 +18,11 @@
   display: flex;
   justify-content: space-between;
   height: 2.5rem;
-  font-size: 0.7rem;
+  font-size: .7rem;
   font-family: Arial, 'Helvetica Neue', sans-serif;
 
   & .menu__items .menu__item {
-    padding: 0.7rem;
+    padding: .7rem;
     display: flex;
     align-items: center;
   }
@@ -45,6 +45,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
   & .menu__items .menu__item {
     padding: 0 1.25rem;
     display: flex;
@@ -68,7 +69,7 @@
   justify-content: center;
   align-items: center;
 
-  &:before {
+  &::before {
     content: '';
     position: absolute;
     background-repeat: no-repeat;
@@ -76,12 +77,14 @@
 }
 
 .menu__item--search {
-  &:before {
+
+  &::before {
     height: 1.25rem;
     width: 1.25rem;
     background-image: url(./../../assets/img/icons/search.svg);
   }
-  &:hover:before {
+
+  &:hover::before {
     background-image: url(./../../assets/img/icons/search-hover.svg);
   }
 }
@@ -89,12 +92,13 @@
 .menu__item--cart {
   padding: .5rem !important;
 
-  &:before {
+  &::before {
     height: 1.6rem;
     width: 1.6rem;
     background-image: url(./../../assets/img/icons/cart-empty.svg);
   }
-  &:hover:before {
+
+  &:hover::before {
     background-image: url(./../../assets/img/icons/cart-empty-hover.svg);
   }
 }
