--- a/src/css/components/navbar.css
+++ b/src/css/components/navbar.css
@@ -79,8 +79,8 @@
 .menu__item--search {
 
   &::before {
-    height: 1.25rem;
-    width: 1.25rem;
+    height: 1.6rem;
+    width: 1.6rem;
     background-image: url(./../../assets/img/icons/search.svg);
   }
 
@@ -90,7 +90,7 @@
 }
 
 .menu__item--cart {
-  padding: .5rem !important;
+  padding-left: .7rem !important;
 
   &::before {
     height: 1.6rem;
