--- a/src/css/components/iteminfo.css
+++ b/src/css/components/iteminfo.css
@@ -12,6 +12,7 @@
   & .info__wrapper {
     display: flex;
     flex-wrap: wrap;
+    align-items: baseline;
   }
 
   & .info__title {
@@ -46,7 +47,7 @@
 
   & p {
     font-weight: bold;
-    margin-top: var(--spacerBig);
+    margin: var(--spacerBig) 0 var(--spacerRegular);
   }
 
   & .shopitem__options {
@@ -56,7 +57,7 @@
 
   & .shopitem__option {
     display: flex;
-    margin-bottom: calc(var(--spacerRegular) / 2);
+    margin: 0 0 calc(var(--spacerRegular) / 2);
   }
 
   & .shopitem__cart {
@@ -76,7 +77,7 @@
   position: relative;
   box-sizing: border-box;
   border: .01rem solid var(--colorGreyDark);
-  transform: translate(-.6rem, .1rem);
+  transform: translate(-.6rem, .2rem);
 }
 
 .radio__mark::before {
