--- a/src/css/components/shopitem.css
+++ b/src/css/components/shopitem.css
@@ -49,3 +49,11 @@
 .back--webshop {
   margin-top: var(--spacerBig);
 }
+
+.addedtocart {
+  margin-top: var(--spacerBig);
+  font-size: var(--fontSmall);
+  text-transform: uppercase;
+  letter-spacing: .15rem;
+  /* margin-left: 5.2rem; */
+}
