--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -26,7 +26,7 @@
     position: absolute;
     height: 1.25rem;
     width: 2rem;
-    background-image: url(./../../assets/img/icons/arrow.svg);
+    background-image: url(../../assets/img/icons/arrow.svg);
     background-repeat: no-repeat;
     transform: translate(-2rem, .3rem);
   }
@@ -50,7 +50,7 @@
   display: inline-block;
   transform: translateX(1.7rem);
   border-bottom: 1px dotted black;
-  font-size: var(--fontSmall); 
+  font-size: var(--fontSmall);
 
   &::before {
     position: absolute;
