Chechkout voor orders aangemaakt, volledig functioneel

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -39,37 +39,17 @@ button:hover {
   cursor: pointer;
 }
 
-@font-face {
-  font-family: 'Swiss Condensed';
-  src: url(./../assets/fonts/Swiss/Swiss-Condensed.woff2) format('woff2'), url(./../assets/fonts/Swiss/Swiss-Condensed.woff) format('woff');
-  font-weight: normal;
-  font-style: normal;
+.container {
+  width: 64rem;
+  margin: 0 auto;
 }
 
-@font-face {
-  font-family: Swiss;
-  src: url(./../assets/fonts/Swiss/Swiss.woff2) format('woff2'), url(./../assets/fonts/Swiss/Swiss.woff) format('woff');
-  font-weight: normal;
-  font-style: normal;
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-@font-face {
-  font-family: 'News Gothic';
-  src: url(./../assets/fonts/NewsGothic/NewsGothic.woff2) format('woff2'), url(./../assets/fonts/NewsGothic/NewsGothic.woff) format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'News Gothic';
-  src: url(./../assets/fonts/NewsGothic/NewsGothic-Bold.woff2) format('woff2'), url(./../assets/fonts/NewsGothic/NewsGothic-Bold.woff) format('woff');
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'News Gothic';
-  src: url(./../assets/fonts/NewsGothic/NewsGothic-Oblique.woff2) format('woff2'), url(./../assets/fonts/NewsGothic/NewsGothic-Oblique.woff) format('woff');
-  font-weight: normal;
-  font-style: oblique;
+footer {
+  margin-top: var(--spacerBig);
 }
