--- a/src/css/components/iteminfo.css
+++ b/src/css/components/iteminfo.css
@@ -63,7 +63,7 @@
 .shopitem__label {
   /* display: flex;
   margin: 0 0 calc(var(--spacerRegular) / 2); */
-  background-color: var(--colorGrey);
+
   border: 1px solid rgb(226, 226, 226);
   padding: .8rem 1.2rem .6rem;
   margin-right: var(--spacerRegular);
@@ -82,6 +82,7 @@
 }
 
 .shopitem__input:checked + .shopitem__label {
+  background-color: var(--colorGrey);
   border: 1px solid rgb(117, 117, 117);
   font-weight: bold;
 }
@@ -91,7 +92,7 @@
   /* display: none; */
 }
 
-.radio__mark {
+/* .radio__mark {
   width: .75rem;
   height: .75rem;
   border-radius: 50%;
@@ -113,7 +114,7 @@
   margin: auto;
   background-color: black;
   transform: scale(0);
-}
+} */
 
 input[type='radio']:checked + .radio__mark::before {
   transform: scale(.5);
