--- a/src/css/components/form.css
+++ b/src/css/components/form.css
@@ -1,13 +1,14 @@
 .label {
   display: block;
+
   &:hover {
     cursor: pointer;
   }
 }
 
-.label:last-of-type .input--text{
+/* .label:last-of-type .input--text{
   margin-bottom: var(--spacerBig);
-}
+} */
 
 .input {
   background-color: var(--colorGrey);
@@ -23,7 +24,9 @@
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
+  /* stylelint-disable */
   -webkit-appearance: none;
+  /* stylelint-enable */
   margin: 0;
 }
 
@@ -31,9 +34,19 @@ input::-webkit-inner-spin-button {
   display: flex;
 }
 
+.label--quantity button::before,
+.label--quantity button::after {
+  display: inline-block;
+  position: absolute;
+  content: '';
+  width: .6rem;
+  height: .1rem;
+  background-color: var(--colorGreyBorder);
+  transform: translate(-50%, -50%);
+}
+
 .label--quantity button {
   outline: none;
-  -webkit-appearance: none;
   border: none;
   align-items: center;
   justify-content: center;
@@ -46,17 +59,6 @@ input::-webkit-inner-spin-button {
   &:hover::before, &:hover::after {
     background-color: black;
   }
-}
-
-.label--quantity button::before,
-.label--quantity button::after {
-  display: inline-block;
-  position: absolute;
-  content: '';
-  width: .6rem;
-  height: .1rem;
-  background-color: var(--colorGreyBorder);
-  transform: translate(-50%, -50%);
 }
 
 .label--quantity .plus::after {
